<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/colorPrimary">

    <TextView
        android:id="@+id/q1Text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin"
        android:text="Which brand of GPU do you want?"
        android:textSize="@dimen/TextSize"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textColor="@color/colorText"/>

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin"
        app:layout_constraintStart_toStartOf="@id/q1Text"
        app:layout_constraintTop_toBottomOf="@+id/q1Text">

        <RadioButton
            android:id="@+id/NVButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/NVbutton"
            android:textColor="@color/colorText"
            android:textSize="@dimen/TextSize" />

        <RadioButton
            android:id="@+id/AMDButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/AMDbutton"
            android:textColor="@color/colorText"
            android:textSize="@dimen/TextSize" />

    </RadioGroup>

    <TextView
        android:id="@+id/q2text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin"
        android:text="What do you need your GPU to do?"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup"
        android:textColor="@color/colorText"
        android:textSize="@dimen/TextSize"/>

    <CheckBox
        android:id="@+id/checkBox1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin"
        android:text="@string/cb1"
        app:layout_constraintStart_toStartOf="@+id/q2text"
        app:layout_constraintTop_toBottomOf="@+id/q2text"
        android:textSize="@dimen/TextSize"
        android:textColor="@color/colorText"
        android:onClick="onCheckboxClicked"/>
    <CheckBox
        android:id="@+id/checkBox2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cb2"
        app:layout_constraintStart_toStartOf="@+id/q2text"
        app:layout_constraintTop_toBottomOf="@+id/checkBox1"
        android:textSize="@dimen/TextSize"
        android:textColor="@color/colorText"
        android:onClick="onCheckboxClicked"/>
    <CheckBox
        android:id="@+id/checkBox3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cb3"
        app:layout_constraintStart_toStartOf="@+id/q2text"
        app:layout_constraintTop_toBottomOf="@+id/checkBox2"
        android:textSize="@dimen/TextSize"
        android:textColor="@color/colorText"
        android:onClick="onCheckboxClicked"/>
    <CheckBox
        android:id="@+id/checkBox4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cb4"
        app:layout_constraintStart_toStartOf="@+id/q2text"
        app:layout_constraintTop_toBottomOf="@+id/checkBox3"
        android:textSize="@dimen/TextSize"
        android:textColor="@color/colorText"
        android:onClick="onCheckboxClicked"/>
    <CheckBox
        android:id="@+id/checkBox5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cb5"
        app:layout_constraintStart_toStartOf="@+id/q2text"
        app:layout_constraintTop_toBottomOf="@+id/checkBox4"
        android:textSize="@dimen/TextSize"
        android:textColor="@color/colorText"
        android:onClick="onCheckboxClicked"/>

    <TextView
        android:id="@+id/q3text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin"
        android:text="Are you ok with last gen GPUs?"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBox5"
        android:textColor="@color/colorText"
        android:textSize="@dimen/TextSize"/>

    <Switch
        android:id="@+id/switch1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="(Y/N)"
        android:layout_marginEnd="@dimen/margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/q3text"
        android:textSize="@dimen/TextSize"
        android:textColor="@color/colorText"
        android:onClick="switchClick"/>

    <TextView
        android:id="@+id/q4text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin"
        android:text="Your monitor is: "
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/q3text"
        android:textColor="@color/colorText"
        android:textSize="@dimen/TextSize"/>

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/q4text"
        app:layout_constraintTop_toBottomOf="@+id/switch1" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Find a GPU"
        android:layout_marginBottom="@dimen/margin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:drawableBottom="@mipmap/card_foreground"
        android:background="@color/colorPrimary"
        android:textColor="@color/colorText"
        android:textSize="@dimen/TextSize"
        android:onClick="checkbox"
        />


</androidx.constraintlayout.widget.ConstraintLayout>